updated font to create higher contrast

--- a/portfolio/projects/internet.html
+++ b/portfolio/projects/internet.html
@@ -193,12 +193,12 @@ thoughts/concerns/comments
                     <a href = "gaugeme.html">
                         <div class="button left">
                             <img class="arrow" alt="left arrow" src="../assets/left.png" />
-                            <div>prev</div>
+                            <div class="bold">prev</div>
                         </div>   
                     </a>
                     <a class="small-text" href = "infosystems.html">   
                         <div class="button right">
-                            <div>next</div>
+                            <div class="bold">next</div>
                             <img class="arrow" alt="right arrow" src="../assets/right.png" />
                         </div>   
                     </a>
