--- a/portfolio/projects/google.html
+++ b/portfolio/projects/google.html
@@ -130,12 +130,12 @@
                     <a href = "infosystems.html">
                         <div class="button left">
                             <img class="arrow" alt="left arrow" src="../assets/left.png" />
-                            <div>prev</div>
+                            <div class="bold">prev</div>
                         </div>   
                     </a>
                     <a class="small-text" href = "jamjelly.html">   
                         <div class="button right">
-                            <div>next</div>
+                            <div class="bold">next</div>
                             <img class="arrow" alt="right arrow" src="../assets/right.png" />
                         </div>   
                     </a>
