--- a/portfolio/projects/infosystems.html
+++ b/portfolio/projects/infosystems.html
@@ -86,12 +86,12 @@
                     <a href = "internet.html">
                         <div class="button left">
                             <img class="arrow" alt="left arrow" src="../assets/left.png" />
-                            <div>prev</div>
+                            <div class="bold">prev</div>
                         </div>   
                     </a>
                     <a class="small-text" href = "google.html">   
                         <div class="button right">
-                            <div>next</div>
+                            <div class="bold">next</div>
                             <img class="arrow" alt="right arrow" src="../assets/right.png" />
                         </div>   
                     </a>
