--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -73,7 +73,7 @@
                     <div class="services-list">
                         <div class="proj" id = "proj1"> 
                             <a href="projects/google.html">
-                                <img class="cap" alt="graphic with the text Google Ads" src="assets/google.png" />
+                                <img class="cap" alt="night sky graphic with the text Google Ads" src="assets/google.png" />
                                 <div class = "overlay blur">
                                     <div class="long-1">
                                     A 12-week exploration as a STEP intern into front-end 
@@ -85,7 +85,7 @@
                         </div>
                         <div class="proj" id = "proj2"> 
                             <a href="projects/jamjelly.html">
-                                <img class="cap" alt="Spotify graphic" src="assets/spotify.png" />
+                                <img class="cap" alt="colorful blob graphic for Spotify project" src="assets/spotify.png" />
                                 <div class = "overlay blur" id="jamjelly">
                                     <div class="long-1">
                                     A Spotify playlist generator that creates an editable playlist of varying size for users based on their favorite artist, genre, and current mood.
@@ -96,7 +96,7 @@
                         </div>
                         <div class="proj" id = "proj3" >
                             <a href="projects/pamela.html">
-                                <img class="cap" alt="Pamela's Diner graphic" src="assets/pamelas.PNG" />
+                                <img class="cap" alt="pink and teal graphic for Pamela's Diner website redesign" src="assets/pamelas.PNG" />
                                 <div class = "overlay blur">
                                     <div class="long-1">
                                     A case study done to improve the user interface, accessibility, and look
@@ -108,7 +108,7 @@
                         </div>
                         <div class="proj" id = "proj4"> 
                             <a href="projects/gaugeme.html">
-                                <img class="cap" alt="Gauge Me graphic" src="assets/gauge.png" />
+                                <img class="cap" alt="blueish-purple graphic for project titled Gauge Me" src="assets/gauge.png" />
                                 <div class = "overlay blur">
                                     <div class="long-1">
                                         Gauge Me, a proposed Slack add-on that improves employee wellbeing and mental health while working from home.
@@ -119,7 +119,7 @@
                         </div>
                         <div class="proj" id = "proj5"> 
                             <a href="projects/internet.html">
-                                <img class="cap" alt="The Data Age graphic" src="assets/data1.PNG" />
+                                <img class="cap" alt="pink and green graphic for project titled The Data Age" src="assets/data1.PNG" />
                                 <div class = "overlay blur">
                                     <div class="long">
                                         "What is IS? Why should people care?" This project integrates design principles such as color theory, typography, and contrast to create an effective visual experience. 
@@ -133,7 +133,7 @@
                         </div>
                         <div class="proj" id = "proj6" >
                             <a href="projects/infosystems.html">
-                                <img class="cap" alt="graphic for the IS Office at CMU" src="assets/IS.png" />
+                                <img class="cap" alt="red and grey graphic for the IS Office at CMU" src="assets/IS.png" />
                                 <div class = "overlay blur">
                                     <div class="long-1">
                                         Various posters and graphic I've designed as an office assistant for the Information Systems Office at Carnegie Mellon University.
