--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -50,7 +50,7 @@
         <div class="spacing">
             <div class="parent-flex nav-bar">
                 <div class="flex-item-left">
-                    <div class="section-header-1">Huarui Lai</div>
+                    <div class="section-header">Huarui Lai</div>
                     <div class="body-text">Hi! I’m an aspiring <span class="green-font">UI/UX designer</span>
                      and current sophomore at Carnegie Mellon University studying 
                      <span class="green-font">Information Systems</span> and 
