updating responsive layout

--- a/portfolio/projects/gaugeme.html
+++ b/portfolio/projects/gaugeme.html
@@ -147,7 +147,7 @@
                             <div class="bold">prev</div>
                         </div>   
                     </a>
-                    <a class="small-text" href = "internet.html">   
+                    <a href = "internet.html">   
                         <div class="button right">
                             <div class="bold">next</div>
                             <img class="arrow" alt="right arrow" src="../assets/right.png" />
