--- a/portfolio/projects/google.html
+++ b/portfolio/projects/google.html
@@ -133,7 +133,7 @@
                             <div class="bold">prev</div>
                         </div>   
                     </a>
-                    <a class="small-text" href = "jamjelly.html">   
+                    <a href = "jamjelly.html">   
                         <div class="button right">
                             <div class="bold">next</div>
                             <img class="arrow" alt="right arrow" src="../assets/right.png" />
