--- a/portfolio/projects/infosystems.html
+++ b/portfolio/projects/infosystems.html
@@ -89,7 +89,7 @@
                             <div class="bold">prev</div>
                         </div>   
                     </a>
-                    <a class="small-text" href = "google.html">   
+                    <a href = "google.html">   
                         <div class="button right">
                             <div class="bold">next</div>
                             <img class="arrow" alt="right arrow" src="../assets/right.png" />
