--- a/portfolio/projects/internet.html
+++ b/portfolio/projects/internet.html
@@ -164,6 +164,8 @@ thoughts/concerns/comments
             <div class="img-sections">
                 <img class="imgs" alt="data wireframe 1" src="../assets/data1.PNG" />
                 <img class="imgs" alt="data wireframe 2" src="../assets/data2.PNG" />
+            </div>
+            <div class="img-sections">
                 <img class="imgs" alt="data wireframe 3" src="../assets/data3.PNG" />
             </div>
         </div>
@@ -196,7 +198,7 @@ thoughts/concerns/comments
                             <div class="bold">prev</div>
                         </div>   
                     </a>
-                    <a class="small-text" href = "infosystems.html">   
+                    <a href = "infosystems.html">   
                         <div class="button right">
                             <div class="bold">next</div>
                             <img class="arrow" alt="right arrow" src="../assets/right.png" />
