--- a/portfolio/projects/jamjelly.html
+++ b/portfolio/projects/jamjelly.html
@@ -118,10 +118,12 @@
             <div class="wire-section">
                 <img class="port" alt="start page" src="../assets/start.png" />
                 <img class="port" alt="intro page" src="../assets/intro.png" /> 
-                <img class="port" alt="artist page" src="../assets/artist.png" /> 
             </div>
             <div class="wire-section">
+                <img class="port" alt="artist page" src="../assets/artist.png" /> 
                 <img class="port" alt="mood page" src="../assets/mood.png" />
+            </div>
+            <div class="wire-section">
                 <img class="port" alt="genre page" src="../assets/genre.png" /> 
                 <img class="port" alt="playlist page" src="../assets/playlist.png" /> 
             </div>
@@ -163,7 +165,7 @@
                             <div class="bold">prev</div>
                         </div>   
                     </a>
-                    <a class="small-text" href = "pamela.html">   
+                    <a href = "pamela.html">   
                         <div class="button right">
                             <div class="bold">next</div>
                             <img class="arrow" alt="right arrow" src="../assets/right.png" />
