--- a/portfolio/projects/pamela.html
+++ b/portfolio/projects/pamela.html
@@ -86,7 +86,7 @@
                     <div class="subheading">Information Architecture</div>
             </div>
             <div class="wire-section">
-                <img class="port info-arch" alt="information architecture diagram" src="../assets/infoarch.png" />
+                <img class="info-arch" alt="information architecture diagram" src="../assets/infoarch.png" />
             </div>
             <div class="description">
                 This site is built intentionally and carefully, with clear font sizes, a consistent color scheme, and ease of navigation emphasized throughout. When the user lands on the main page, they’ll notice the large, newly designed Pamela’s Diner logo and their motto. There’s a picture of one of their stores on the main page to draw the user in and provide visual stimulation. On the other four pages, I utilized subtitles and headers to break up the information and make the page more readable. I also consistently used sized and formatted body text to increase readability. The two most important areas of the website to increase ease of navigation are located at the top for easy access. The top of the website has the fixed menu and search bar so the user doesn’t have to scroll all the way up to move pages and there is no need for extra links in the footer. The footer on the right hand side contains all the important information so users can easily contact Pamela’s Diner in Shadyside, and the clickable logo allows for easy navigation back to the main page. The main objective of the organization was clear headings to organize information (hence, the Google Maps of the diner is under the Location page). Minimal, if any, information is redundant on the website, and important information (such as Pamela’s contact information) is accessible on each and every page. 
@@ -270,7 +270,7 @@ thoughts/concerns/comments
                             <div class="bold">prev</div>
                         </div>   
                     </a>
-                    <a class="small-text" href = "gaugeme.html">   
+                    <a href = "gaugeme.html">   
                         <div class="button right">
                             <div class="bold">next</div>
                             <img class="arrow" alt="right arrow" src="../assets/right.png" />
