--- a/portfolio/projects/pamela.html
+++ b/portfolio/projects/pamela.html
@@ -67,6 +67,8 @@
             <div class="wire-section">
                 <img class="port lofi" alt="pamela lofi prototype 1" src="../assets/lofi1.PNG" />
                 <img class="port lofi" alt="pamela lofi prototype 2" src="../assets/lofi2.PNG" />
+            </div>
+            <div class="wire-section">
                 <img class="port lofi" alt="pamela lofi prototype 3" src="../assets/lofi3.PNG" />
             </div>
         </div>
@@ -76,7 +78,7 @@
                     <div class="subheading">Redesigned Logo and Color Palette</div>
             </div>
             <div class="wire-section">
-                <img class="port logo-size" alt="redesigned logo" src="../assets/pamlogo.png" />
+                <img class="logo-size" alt="redesigned logo" src="../assets/pamlogo.png" />
                 <img class="port color-palette" alt="redesigned color palette" src="../assets/pamcolor.png" /> 
             </div>
         </div>
