--- a/portfolio/projects/pamela.html
+++ b/portfolio/projects/pamela.html
@@ -227,13 +227,13 @@ thoughts/concerns/comments
                     <div class="subheading">Website Design</div>
             </div>
             <div class="img-sections">
-                <img class="imgs" alt="redesigned Pamela's Diner website page 1" src="../assets/pam1.PNG" />
-                <img class="imgs" alt="redesigned Pamela's Diner website page 2" src="../assets/pam2.PNG" />
-                <img class="imgs" alt="redesigned Pamela's Diner website page 3" src="../assets/pam5.PNG" />
+                <img class="pam-wireframe" alt="redesigned Pamela's Diner website page 1" src="../assets/pam1.PNG" />
+                <img class="pam-wireframe" alt="redesigned Pamela's Diner website page 2" src="../assets/pam2.PNG" />
+                <img class="pam-wireframe" alt="redesigned Pamela's Diner website page 3" src="../assets/pam5.PNG" />
             </div>
             <div class="img-sections">
-                <img class="imgs" alt="redesigned Pamela's Diner website page 4" src="../assets/pam3.PNG" />
-                <img class="imgs" alt="redesigned Pamela's Diner website page 5" src="../assets/pam4.PNG" />
+                <img class="pam-wireframe" alt="redesigned Pamela's Diner website page 4" src="../assets/pam3.PNG" />
+                <img class="pam-wireframe" alt="redesigned Pamela's Diner website page 5" src="../assets/pam4.PNG" />
             </div>
         </div>
 
