updating image size in dif screen sizes

--- a/portfolio/projects/google.html
+++ b/portfolio/projects/google.html
@@ -57,9 +57,9 @@
 
         <div class="body-text"> 
             <div class="img-sections">
-                <img class="imgs small-img" id = "img1" alt="a sign for Oregon at Google" src="../assets/google-oregon.jpg" />
-                <img class="imgs small-img" id = "img2" alt="me jumping at Yosemite" src="../assets/yosemite.jpg" />
-                <img class="imgs small-img" id = "img3" alt="picture of an iridescent YouTube sign" src="../assets/yt.jpg" /> 
+                <img class="small-img" id = "img1" alt="a sign for Oregon at Google" src="../assets/google-oregon.jpg" />
+                <img class="small-img" id = "img2" alt="me jumping at Yosemite" src="../assets/yosemite.jpg" />
+                <img class="small-img" id = "img3" alt="picture of an iridescent YouTube sign" src="../assets/yt.jpg" /> 
             </div>
         </div>
 
