updated about page view

--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -54,7 +54,7 @@
             </div>
         </div>
 
-        <div class="body-text">
+        <div class="about-body-text">
             <div class="body-text-wide">
                 <div class="subheading">About Me</div>
                     <div class="collage">
