updating pamela's diner about redirection

--- a/portfolio/projects/pamela.html
+++ b/portfolio/projects/pamela.html
@@ -27,7 +27,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="space">
+                        <a href="../about.html" class="space">
                             About
                         </a>
                     </li>
