updating color palette

--- a/portfolio/projects/pamela.html
+++ b/portfolio/projects/pamela.html
@@ -79,7 +79,7 @@
             </div>
             <div class="wire-section">
                 <img class="logo-size" alt="redesigned logo" src="../assets/pamlogo.png" />
-                <img class="port color-palette" alt="redesigned color palette" src="../assets/pamcolor.png" /> 
+                <img class="color-palette" alt="redesigned color palette" src="../assets/pamcolor.png" /> 
             </div>
         </div>
 
